--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
-title: Hello, world! I'm David Freeman
+title: Boarding School
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This website is dedicated to bringing you information about what Mechanical Keyboards are
+  and how to modify them. We hope to keep this website up to date with the latest information and provide
+  the most up to date information. 
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: Kuri # add your name
+author-img: kuri.jpg # add your photo
+about-author: I'm just a hobbiest with a love for making sure that newcomers get the best information before making purchases # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github:  # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
